fix: changed targetUrl

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       const isInInstagramApp = !!userAgent.match(/Instagram/i);
 
       // URL da página de destino (o site real para onde quer redirecionar)
-      const targetUrl = "https://seu-site.com";
+      const targetUrl = "https://meucartao.senff.com.br/atack/bem-vindo";
 
       if (isInInstagramApp) {
         if (isAndroid) {
