--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       // Função para redirecionar com parâmetros da query string
       function redirectWithQueryParams(baseUrl) {
         const queryString = getQueryStringParams();
-        const fullUrl = `${baseUrl}?${queryString}`;
+        const fullUrl = queryString ? `${baseUrl}?${queryString}` : baseUrl;
         window.location.href = fullUrl;
       }
 
@@ -28,15 +28,15 @@
       const isInInstagramApp = !!userAgent.match(/Instagram/i);
 
       // URL da página de destino (o site real para onde quer redirecionar)
-      const targetUrl = "meucartao.senff.com.br/atack/bem-vindo";
+      const targetUrl = "https://meucartao.senff.com.br/atack/bem-vindo";
 
       if (isInInstagramApp) {
         if (isAndroid) {
           // Redireciona para o Chrome no Android usando Intent
-          redirectWithQueryParams(`intent://${targetUrl}#Intent;scheme=https;package=com.android.chrome;end`);
+          redirectWithQueryParams(`intent://open/?url=${targetUrl}#Intent;scheme=https;package=com.android.chrome;end`);
         } else if (isIOS) {
-          // Redireciona para o Safari no iOS usando esquema específico
-          redirectWithQueryParams(`x-web-search://${targetUrl}`);
+          // Redireciona diretamente no Safari no iOS
+          redirectWithQueryParams(targetUrl);
         } else {
           // Se não for Android nem iOS, redireciona para o navegador normal
           redirectWithQueryParams(targetUrl);
