--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       const isInInstagramApp = !!userAgent.match(/Instagram/i);
 
       // URL da página de destino (o site real para onde quer redirecionar)
-      const targetUrl = "meucartao.senff.com.br/atack/bem-vindo"; // URL absoluta com https
+      const targetUrl = "https://meucartao.senff.com.br/atack/bem-vindo"; // URL absoluta com https
 
       if (isInInstagramApp) {
         if (isAndroid) {
